<resources>
    <string name="app_name">骑行计时器</string>
    <string name="title_time">计时</string>
    <string name="title_riders">人员</string>
    <string name="title_tools">工具</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="startButtonText">Ride\nOn!</string>
    <string name="finishButtonText">Ride\nOff!</string>
    <string name="workMode">运行模式：</string>
    <string name="workMode_Start">起点</string>
    <string name="workMode_Finish">终点</string>
    <string name="pleaseChooseRider">请选择骑手</string>
    <string name="number">序号</string>
    <string name="name">姓名</string>
    <string name="confirm">确定</string>
    <string name="clearData">清空数据</string>
    <string name="add">添加</string>
    <string name="input">导入</string>
    <string name="output">导出</string>
    <string name="inputRidersHint">1,选手1\n2,选手2\n3,选手3\n…</string>
    <string name="copyToClipboard">复制到剪贴板</string>
    <string name="riderId"># %1$s</string>
    <string name="exchangeWithOtherRider">与其它骑手交换成绩</string>
    <string name="deleteScore_cannotUndo">清除此成绩(无法撤销)</string>
    <string name="copyScoreToOtherRider">复制成绩到其它骑手</string>
    <string name="id冒号">ID:</string>
    <string name="name冒号">姓名:</string>
    <string name="start冒号">出发:</string>
    <string name="finish冒号">到达:</string>
    <string name="timeBonus括号s括号冒号">减秒(s):</string>
    <string name="note冒号">备注:</string>
    <string name="datetimeFormatterHint">yyyy/MM/dd_HH:mm:ss.SSSS</string>
    <string name="calcScore">计算成绩</string>
    <string name="about">关于</string>
</resources>