<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:paddingHorizontal="5dp">
    <TextView
        android:id="@+id/riderId"
        android:gravity="center_vertical"
        android:layout_width="60dp"
        android:hint="@string/number"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/riderName"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:hint="@string/name"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/delete"/>

</LinearLayout>