<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.zjut.cyclingClubRaceTool.ui.home.HomeFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.zjut.cyclingClubRaceTool.ui.riderList.RiderListFragment"
        android:label="@string/title_riders"
        tools:layout="@layout/fragment_rider_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.zjut.cyclingClubRaceTool.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />
</navigation>