<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.zjut.cyclingClubRaceTool.ui.riderList.RiderListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/riderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editArea"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/editArea"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/inputRidersButton"
            android:text="@string/input"/>
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/outputRidersButton"
            android:text="@string/output"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/editArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:layout_marginStart="5dp"
            android:id="@+id/inputRiderId"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:hint="@string/number"
            android:importantForAutofill="no"
            android:inputType="number" />
        <EditText
            android:id="@+id/inputRiderName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text" />
        <Button
            android:id="@+id/addRider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>