<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.zjut.cyclingClubRaceTool.ui.tools.ToolsFragment">

    <LinearLayout
        android:id="@+id/modeLinear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:text="@string/workMode"/>
        <TextView
            android:id="@+id/workmodeString"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:text="@string/workMode_Start"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/workmodeSwitch"
            android:layout_width="80dp"
            android:paddingEnd="15dp"
            android:paddingStart="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:checked="false"
            app:trackTint="@color/workmode_switch_track_color"
            app:trackTintMode="multiply"
            app:thumbTint="@color/workmode_switch_thumb_color"
            app:thumbTintMode="multiply"
            />
    </LinearLayout>
    <Button
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calcScore"
        android:text="@string/calcScore"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/modeLinear"/>

    <Button
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clearData"
        android:text="@string/clearData"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/calcScore"/>

    <Button
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:text="@string/about"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/clearData"/>

</androidx.constraintlayout.widget.ConstraintLayout>