<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/id冒号"
            android:gravity="end"
            android:layout_margin="10dp"
            android:labelFor="@id/idEditText"/>
        <EditText
            android:id="@+id/idEditText"
            android:textSize="30sp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:importantForAutofill="no"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/name冒号"
            android:gravity="end"
            android:layout_margin="10dp"
            android:labelFor="@id/nameEditText"/>
        <EditText
            android:id="@+id/nameEditText"
            android:textSize="30sp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/start冒号"
            android:gravity="end"
            android:layout_margin="10dp"
            android:labelFor="@id/startEditText"/>
        <EditText
            android:id="@+id/startEditText"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="datetime"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/finish冒号"
            android:gravity="end"
            android:layout_margin="10dp"
            android:labelFor="@id/finishEditText"/>
        <EditText
            android:id="@+id/finishEditText"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="datetime"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/timeBonus括号s括号冒号"
            android:gravity="end"
            android:layout_margin="10dp"
            android:labelFor="@id/timeBonusEditText"/>
        <EditText
            android:id="@+id/timeBonusEditText"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="datetime"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/note冒号"
            android:gravity="end"
            android:layout_margin="10dp"
            android:labelFor="@id/noteEditText"/>
        <EditText
            android:id="@+id/noteEditText"
            android:textSize="30sp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textSize="30sp"
        android:text="@string/confirm"/>


</LinearLayout>